<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Обучение детей</string>
    <string name="hello_world">Hello world!</string>
    <string name="present">Представьтесь</string>
    <string name="reference">Настройки</string>
    <string name="admin">Администрирование</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="no_courses_found">Разделы не найдены!</string>
    <string name="courses_name">Выберите раздел!</string>
   	<string name="share_title_template">See what dearest painted</string>
    <string name="share_text_template"></string>
    <string name="toolbox_share_title">Share</string>
    <string name="no_way_to_share">Can locate an app to share with &#8230;</string>
     <string name="description">Кнопка панели инструментов</string>
    
    <string name="COLOR_MENU_ID">Цвет</string>
    <string name="EMBOSS_MENU_ID">Основной режим рисования</string>
    <string name="BLUR_MENU_ID">Режим рисования с размытием</string>
    <string name="SIZE_MENU_ID">Размер кисти</string>
    <string name="ERASE_MENU_ID">Ластик</string>
    <string name="CLEAR_ALL">Очистить все</string>
    <string name="SAVE">Сохранить</string>
    <string name="SHARE">Послать в ММС</string>
    <string name="ABOUT">Об авторе</string>
          
</resources>